--- a/page2.html
+++ b/page2.html
@@ -3,9 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Website</title>
+    <link rel="icon" href="nerd.ico">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p> page 2</p>
+    <header>
+        <h1>Darius Beldi</h1>
+        <p>Student at FMI</p>
+        <div class = "butoane">
+            <a href="index.html"> <button id = "home_button" type="button">Home</button></a>
+        
+        <nav>
+            <div class="dropdown">
+                <button class="dropbtn">Menu</button>
+                <div class="dropdown-content">
+                    <a href="page1.html">About me</a>
+                    <a href="page2.html">Portofolio</a>
+                    <a href="page3.html">Contact</a>
+                </div>
+            </div>
+        </nav>
+    </div>
+    </header>
+
+    <main>
+    <div class="container" id="portofolio">
+            <h2>My portofolio</h2>
+        <p>This is my only program right now: </p>
+
+        <a href="https://github.com/dasurica/Project1-OOP">Project1-OOP</a>
+
+    </div>
+</main>
+<footer>
+    © 2024 Beldi Darius Vlad    
+</footer>
 </body>
 </html>
