--- a/page1.html
+++ b/page1.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>About Me</title>
+    <link rel="icon" href="nerd.ico">
 </head>
 <body>
-    <p> page 1</p>
+    <header>
+        <h1>Darius Beldi</h1>
+        <p>Student at FMI</p>
+        <div class = "butoane">
+            <a href="index.html"> <button id = "home_button" type="button">Home</button></a>
+        
+        <nav>
+            <div class="dropdown">
+                <button class="dropbtn">Menu</button>
+                <div class="dropdown-content">
+                    <a href="page1.html">About me</a>
+                    <a href="page2.html">Portofolio</a>
+                    <a href="page3.html">Contact</a>
+                </div>
+            </div>
+        </nav>
+    </div>
+    </header>
+    <main>
+<div class="container" id="about">
+    <p>  Hello, I'm Beldi Darius! I am passionate about tehnology and the constant reinvention of this field.
+         With 1/2 a year of experience in Computer Science, because I am currently an undergrad. 
+         My journey in  Computer Science began in October 2023. I am committed to learning everyday. 
+         When I'm not pursuing my passion, you can find me walking in the park.</p>
+        </main>
+
+        <footer>
+            © 2024 Beldi Darius Vlad    
+        </footer>
+</div>
 </body>
 </html>
