--- a/page3.html
+++ b/page3.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
     <link rel="stylesheet" href="styles.css">
+    <title>Contact</title>
+    <link rel="icon" href="nerd.ico">
 </head>
 <body>
     <header>
         <h1>Darius Beldi</h1>
         <p>Student at FMI</p>
+        <div class="butoane">
+            <a href="index.html"> <button id = "home_button" type="button">Home</button></a>
+        
         <nav>
             <div class="dropdown">
                 <button class="dropbtn">Menu</button>
@@ -21,6 +26,7 @@
                 </div>
             </div>
         </nav>
+    </div>
     </header>
 
 
@@ -34,13 +40,13 @@
         <p><a href="https://www.facebook.com/dariusvlad26/">Facebook</a></p>
     </div>
 
-
+<main>
     <div class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d712.2231764826138!2d26.100020673228677!3d44.435363072727704!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b1ff472f47f047%3A0x493984726f0235f9!2sFacultatea%20de%20Matematic%C4%83%20%C8%99i%20Informatic%C4%83!5e0!3m2!1sro!2sro!4v1711964578218!5m2!1sro!2sro" 
         width="600" height="450" style="border:0;" 
         allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-
+</main>
     <footer>
         © 2024 Beldi Darius Vlad    
     </footer>
