--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
     </div>
     </header>
-    <img id ="photo1" src="image1.png" alt="Image 1" >
+    <img id ="photo1" src="https://client.messaging.adobe.com/2.53.3/assets/sales-avatar-2.png" alt="Image 1" >
     <div class="container" id="about">
         <h2>About Me</h2>
         <p>  &nbsp  &nbsp &nbsp From the moment I typed my first “Hello, World!” program, I knew I had found my calling. 
