--- a/page1.html
+++ b/page1.html
@@ -12,8 +12,8 @@
         <h1>Darius Beldi</h1>
         <p>Student at FMI</p>
         <div class = "butoane">
-            <a href="index.html"> <button id = "home_button" type="button">Home</button></a>
-        
+            <a href="index.html" id = "home_button">Home</a>
+            
         <nav>
             <div class="dropdown">
                 <button class="dropbtn">Menu</button>
@@ -28,15 +28,16 @@
     </header>
     <main>
 <div class="container" id="about">
-    <p>  Hello, I'm Beldi Darius! I am passionate about tehnology and the constant reinvention of this field.
+    <p id = "text_cu_shadow">  Hello, I'm Beldi Darius! I am passionate about tehnology and the constant reinvention of this field.
          With 1/2 a year of experience in Computer Science, because I am currently an undergrad. 
          My journey in  Computer Science began in October 2023. I am committed to learning everyday. 
          When I'm not pursuing my passion, you can find me walking in the park.</p>
+        </div>
         </main>
 
         <footer>
             © 2024 Beldi Darius Vlad    
         </footer>
-</div>
+
 </body>
 </html>
