--- a/page2.html
+++ b/page2.html
@@ -12,7 +12,7 @@
         <h1>Darius Beldi</h1>
         <p>Student at FMI</p>
         <div class = "butoane">
-            <a href="index.html"> <button id = "home_button" type="button">Home</button></a>
+            <a href="index.html" id = "home_button">Home</a>
         
         <nav>
             <div class="dropdown">
@@ -30,10 +30,11 @@
     <main>
     <div class="container" id="portofolio">
             <h2>My portofolio</h2>
-        <p>This is my only program right now: </p>
+        <div id="text_cu_shadow"> 
+            <p>This is my only program right now: </p>
 
         <a href="https://github.com/dasurica/Project1-OOP">Project1-OOP</a>
-
+    </div>
     </div>
 </main>
 <footer>
